--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <%- include ('partials/head') %>
-</head>
-<body class="sidebar-right-visible">
+<%- include ('partials/layout_header') %>
 
-<header>
-    <%- include ('partials/header') %>
-</header>
 <div class="page-content">
     <sidebar>
         <%- include ('partials/sidebar') %>
@@ -20,6 +12,4 @@
     </div>
 </div>
 
-<%- include ('partials/footer') %>
-</body>
-</html>
+<%- include ('partials/layout_footer') %>
