--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -12,6 +12,6 @@
 <!-- /core JS files -->
 
 <!-- Theme JS files -->
-<script src="/static/assets/js/main.js"></script>
+<!--<script src="/static/assets/js/main.js"></script>-->
 <!-- /theme JS files -->
 
