--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,7 +21,7 @@
                 <li class="nav-item"> <a class="nav-link" href="#">Services</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#">About</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#">FAQ</a> </li>
-            </ul> <a class="btn btn-outline-light navbar-btn ml-md-2">Contact us</a>
+            </ul> <a class="btn btn-outline-light navbar-btn ml-md-2" href="/logout">Log Out</a>
         </div>
     </div>
 </nav>
