--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,6 +5,7 @@
 <!-- Global stylesheets -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
 <link rel="stylesheet" href="https://static.pingendo.com/bootstrap/bootstrap-4.3.1.css">
+<link rel="stylesheet" href="/static/css/style.css">
 <!-- /global stylesheets -->
 
 <!-- Core JS files -->
@@ -12,6 +13,6 @@
 <!-- /core JS files -->
 
 <!-- Theme JS files -->
-<!--<script src="/static/assets/js/main.js"></script>-->
+<script src="/static/js/main.js"></script>
 <!-- /theme JS files -->
 
