functionality add playlist

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -152,10 +152,10 @@
             </div>
             <div class="modal-body">
                 <form>
-                    <div class="form-group"> <input name="playlistName" type="text" class="form-control" placeholder="Enter playlist name"> </div>
+                    <div class="form-group"> <input id="inputPlaylistName" type="text" class="form-control" placeholder="Enter playlist name"> </div>
                 </form>
             </div>
-            <div class="modal-footer"> <button type="button" class="btn btn-primary">Add</button> <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> </div>
+            <div class="modal-footer"> <button type="button" id="btnAddPlaylist" class="btn btn-primary">Add</button> <button id="btnCloseAddPlaylistModal" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> </div>
         </div>
     </div>
 </div>
