--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -43,77 +43,7 @@
                             </div>
                         </div>
                         <div class="col-md-12">
-                            <div class="accordion" id="accordionExample">
-                                <div class="card">
-                                    <div class="card-header" id="headingOne">
-                                        <h2 class="mb-0">
-                                            <button class="btn btn-link float-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> Playlist 1 </button>
-                                        </h2>
-                                        <a class="btn btn-primary float-right btn-sm" href="#"><i class="fa fa-trash-o" aria-hidden="true"></i> &nbsp;Delete </a>
-                                        <a class="btn btn-primary float-right btn-sm" href="#"><i class="fa fa-plus" aria-hidden="true"></i> &nbsp;Add Media </a>
-                                    </div>
-                                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-                                        <div class="card-body">
-                                            <div class="container-fluid media-list">
-                                                <div class="row">
-                                                    <div class="col-6 col-md-4 col-lg-2 p-0 media-list-item"> <img class="img-fluid d-block" src="https://static.pingendo.com/cover-bubble-light.svg"> </div>
-                                                    <div class="col-6 col-md-4 col-lg-2 p-0 media-list-item"> <img class="img-fluid d-block" src="https://static.pingendo.com/cover-moon.svg"> </div>
-                                                    <div class="col-6 col-md-4 col-lg-2 p-0 media-list-item"> <img class="img-fluid d-block" src="https://static.pingendo.com/cover-bubble-light.svg"> </div>
-                                                    <div class="col-6 col-md-4 col-lg-2 p-0 media-list-item"> <img class="img-fluid d-block" src="https://static.pingendo.com/cover-bubble-dark.svg"> </div>
-                                                    <div class="col-6 col-md-4 col-lg-2 p-0 media-list-item"> <img class="img-fluid d-block" src="https://static.pingendo.com/cover-moon.svg"> </div>
-                                                    <div class="col-6 col-md-4 col-lg-2 p-0 media-list-item"> <img class="img-fluid d-block" src="https://static.pingendo.com/cover-bubble-light.svg"> </div>
-                                                    <div class="col-6 col-md-4 col-lg-2 p-0 media-list-item"> <img class="img-fluid d-block" src="https://static.pingendo.com/cover-bubble-light.svg"> </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="card">
-                                    <div class="card-header" id="headingTwo">
-                                        <h2 class="mb-0">
-                                            <button class="btn btn-link collapsed float-left" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"> Playlist 2 </button>
-                                        </h2><a class="btn btn-primary float-right btn-sm" href="#"><i class="fa fa-trash-o" aria-hidden="true"></i> &nbsp;Delete </a>
-                                        <a class="btn btn-primary float-right btn-sm" href="#"><i class="fa fa-plus" aria-hidden="true"></i> &nbsp;Add Media </a>
-                                    </div>
-                                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                                        <div class="card-body">
-                                            <div class="container-fluid media-list">
-                                                <div class="row">
-                                                    <div class="col-6 col-md-4 col-lg-2 p-0 media-list-item"> <img class="img-fluid d-block" src="https://static.pingendo.com/cover-bubble-light.svg"> </div>
-                                                    <div class="col-6 col-md-4 col-lg-2 p-0 media-list-item"> <img class="img-fluid d-block" src="https://static.pingendo.com/cover-moon.svg"> </div>
-                                                    <div class="col-6 col-md-4 col-lg-2 p-0 media-list-item"> <img class="img-fluid d-block" src="https://static.pingendo.com/cover-bubble-light.svg"> </div>
-                                                    <div class="col-6 col-md-4 col-lg-2 p-0 media-list-item"> <img class="img-fluid d-block" src="https://static.pingendo.com/cover-bubble-dark.svg"> </div>
-                                                    <div class="col-6 col-md-4 col-lg-2 p-0 media-list-item"> <img class="img-fluid d-block" src="https://static.pingendo.com/cover-moon.svg"> </div>
-                                                    <div class="col-6 col-md-4 col-lg-2 p-0 media-list-item"> <img class="img-fluid d-block" src="https://static.pingendo.com/cover-bubble-light.svg"> </div>
-                                                    <div class="col-6 col-md-4 col-lg-2 p-0 media-list-item"> <img class="img-fluid d-block" src="https://static.pingendo.com/cover-bubble-light.svg"> </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="card">
-                                    <div class="card-header" id="headingThree">
-                                        <h2 class="mb-0">
-                                            <button class="btn btn-link collapsed float-left" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree"> Playlist 3 </button>
-                                        </h2><a class="btn btn-primary float-right btn-sm" href="#"><i class="fa fa-trash-o" aria-hidden="true"></i> &nbsp;Delete </a>
-                                        <a class="btn btn-primary float-right btn-sm" href="#"><i class="fa fa-plus" aria-hidden="true"></i> &nbsp;Add Media </a>
-                                    </div>
-                                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                                        <div class="card-body">
-                                            <div class="container-fluid media-list">
-                                                <div class="row">
-                                                    <div class="col-6 col-md-4 col-lg-2 p-0 media-list-item"> <img class="img-fluid d-block" src="https://static.pingendo.com/cover-bubble-light.svg"> </div>
-                                                    <div class="col-6 col-md-4 col-lg-2 p-0 media-list-item"> <img class="img-fluid d-block" src="https://static.pingendo.com/cover-moon.svg"> </div>
-                                                    <div class="col-6 col-md-4 col-lg-2 p-0 media-list-item"> <img class="img-fluid d-block" src="https://static.pingendo.com/cover-bubble-light.svg"> </div>
-                                                    <div class="col-6 col-md-4 col-lg-2 p-0 media-list-item"> <img class="img-fluid d-block" src="https://static.pingendo.com/cover-bubble-dark.svg"> </div>
-                                                    <div class="col-6 col-md-4 col-lg-2 p-0 media-list-item"> <img class="img-fluid d-block" src="https://static.pingendo.com/cover-moon.svg"> </div>
-                                                    <div class="col-6 col-md-4 col-lg-2 p-0 media-list-item"> <img class="img-fluid d-block" src="https://static.pingendo.com/cover-bubble-light.svg"> </div>
-                                                    <div class="col-6 col-md-4 col-lg-2 p-0 media-list-item"> <img class="img-fluid d-block" src="https://static.pingendo.com/cover-bubble-light.svg"> </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                            <div class="accordion" id="accordionPlaylist">
                             </div>
                         </div>
                     </div>
@@ -143,7 +73,7 @@
         </main>
     </div>
 </div>
-<!--modal-->
+<!--modal-add-playlist-->
 <div class="modal" id="addPlaylistModal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -156,6 +86,30 @@
                 </form>
             </div>
             <div class="modal-footer"> <button type="button" id="btnAddPlaylist" class="btn btn-primary">Add</button> <button id="btnCloseAddPlaylistModal" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> </div>
+        </div>
+    </div>
+</div>
+<!--modal-add-media-->
+<div class="modal" id="addMediaModal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 id="titleMediaAddModal" class="modal-title">Add Media</h5> <button type="button" class="close" data-dismiss="modal"> <span>×</span> </button>
+            </div>
+            <div class="modal-body">
+                <form id="formMediaUpload" enctype="multipart/form-data">
+                    <div class="form-group">
+                        <input id="inputMediaFile" type="file" name="mediaFiles[]" data-url="/api/upload" class="form-control" placeholder="Select media file" multiple>
+                    </div>
+                </form>
+                <div id="uploadedFiles" class=""row>
+
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" id="btnAddMedia" class="btn btn-primary">Upload</button>
+                <button id="btnCloseAddMediaModal" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
         </div>
     </div>
 </div>
