done adding media to playlist

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -99,6 +99,7 @@
             <div class="modal-body">
                 <form id="formMediaUpload" enctype="multipart/form-data">
                     <div class="form-group">
+                        <input id="inputHiddenPlaylist" type="hidden" name="playlist" value="">
                         <input id="inputMediaFile" type="file" name="mediaFiles[]" data-url="/api/upload" class="form-control" placeholder="Select media file" multiple>
                     </div>
                 </form>
