--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -51,19 +51,12 @@
                 <div class="col-md-4">
                     <div class="right-sidebar">
                         <h4>Media</h4>
-                        <div class="row">
-                            <div class="embed-responsive embed-responsive-16by9">
-                                <video src="https://static.pingendo.com/video-placeholder.mp4" class="embed-responsive-item" controls="controls"> Your browser does not support HTML5 video. </video>
-                                <!-- <img class="img-fluid d-block" src="https://static.pingendo.com/img-placeholder-1.svg" height="50px"> -->
-                            </div>
+                        <div class="row" id="mediaThumbnail">
                         </div>
                         <div class="row">
                             <div class="p-4 col-md-12">
                                 <h4 class="mb-4" contenteditable="true">Media Information</h4>
-                                <ul class="list-unstyled">
-                                    <a href="#">Name: video_1.mp4</a> <br>
-                                    <a href="#">Date: 11/11/2020</a> <br>
-                                    <a href="#">Size: 4MB</a> <br>
+                                <ul class="list-unstyled" id="mediaInformation">
                                 </ul>
                             </div>
                         </div>
