--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -49,8 +49,12 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="right-sidebar">
-                        <h4>Media</h4>
+                    <div id="rightSideBar" class="right-sidebar">
+                        <div class="row">
+                            <div class="col-md-6"><h4>Media</h4></div>
+                            <div class="col-md-6" id="mediaDeleteLocation">
+                                </div>
+                        </div>
                         <div class="row" id="mediaThumbnail">
                         </div>
                         <div class="row">
@@ -96,7 +100,7 @@
                         <input id="inputMediaFile" type="file" name="mediaFiles[]" data-url="/api/upload" class="form-control" placeholder="Select media file" multiple>
                     </div>
                 </form>
-                <div id="uploadedFiles" class=""row>
+                <div id="uploadedFiles" >
 
                 </div>
             </div>
