fixed sidebar css

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -15,13 +15,6 @@
                         </button>
                     </div>
                 </div>
-                <div class="sidebar-header">
-                    <div class="user-info">
-            <span class="user-name">Jhon <strong>Smith</strong>
-            </span>
-                        <span class="user-role">Administrator</span>
-                    </div>
-                </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><i class="fa fa-list-alt" aria-hidden="true"></i> Playlists</li>
                     <li class="list-group-item"><i class="fa fa-desktop" aria-hidden="true"></i> Screens</li>
@@ -32,7 +25,7 @@
         <!-- sidebar-wrapper  -->
         <main class="page-content">
             <div class="row playlist-content">
-                <div class="col-md-8">
+                <div class="col-md-8 dashboard-content">
                     <div class="row">
                         <div class="col-md-12">
                             <div class="row">
