--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,10 +14,10 @@
 #show-sidebar {
     position: fixed;
     left: 0;
-    top: 10px;
     border-radius: 0 4px 4px 0px;
     width: 35px;
     transition-delay: 0.3s;
+    z-index: 9999;
 }
 
 .page-wrapper.toggled #show-sidebar {
@@ -30,7 +30,6 @@
     height: 100%;
     max-height: 100%;
     position: fixed;
-    top: 0;
     left: -300px;
     z-index: 999;
 }
@@ -120,14 +119,14 @@
 }
 
 /*--------------------------page-content-----------------------------*/
+.dashboard-content {
+    padding: 30px 40px;
+}
+
 .page-wrapper .page-content {
     display: inline-block;
     width: 100%;
     padding-left: 0px;
-}
-
-.playlist-content {
-    padding: 30px 40px;
 }
 
 .page-wrapper .page-content {
