--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -166,6 +166,12 @@
                             <input name="screen_code_2" type="password" class="form-control" placeholder="Re-enter code">
                         </div>
                     </div>
+                    <div class="form-row">
+                        <div class="custom-control custom-switch">
+                            <input type="checkbox" class="custom-control-input" id="switchScreenShuffle">
+                            <label class="custom-control-label" for="switchScreenShuffle">Shuffle</label>
+                        </div>
+                    </div>
                 </form>
             </div>
             <div class="modal-footer">
