attach playlist to the screen

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -183,6 +183,32 @@
         </div>
     </div>
 </div>
+<!--modal-screen-attach-playlist-->
+<div class="modal" id="screenAttachPlaylistModal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalHeaderSAP">Attach playlist to screen</h5>
+                <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label for="selectModalScreenPlaylistId">Select Playlist</label>
+                        <select class="form-control" id="selectModalScreenPlaylistId">
+                        </select>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" id="btnModalAttachPlaylist" class="btn btn-primary">Attach</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                    Close
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
 <!--modal-add-media-->
 <div class="modal" id="addMediaModal">
     <div class="modal-dialog" role="document">
