fixed small changes

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -52,7 +52,7 @@
                                 </div>
                             </div>
                             <div class="col-md-4">
-                                <div id="rightSideBar" class="right-sidebar">
+                                <div id="rightSideBar" class="right-sidebar d-none">
                                     <div class="row">
                                         <div class="col-md-6"><h4>Media</h4></div>
                                         <div class="col-md-6" id="mediaDeleteLocation">
@@ -169,7 +169,7 @@
                     <div class="form-row">
                         <div class="custom-control custom-switch">
                             <input type="checkbox" class="custom-control-input" id="switchScreenShuffle">
-                            <label class="custom-control-label" for="switchScreenShuffle">Shuffle</label>
+                            <label class="custom-control-label" for="switchScreenShuffle">Shuffle playlist</label>
                         </div>
                     </div>
                 </form>
