--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,9 +13,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbar17">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item"> <a class="nav-link" href="#">Features</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#">Pricing</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#">Product</a> </li>
+                <% if (user) { %>
+                    <li class="nav-item"> <a class="nav-link" href="/dashboard">Dashboard</a> </li>
+                <%} else { %>
+                    <li class="nav-item"> <a class="nav-link" href="#">Features</a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="#">Pricing</a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="#">Product</a> </li>
+                <% } %>
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"> <a class="nav-link" href="#">Services</a> </li>
