--- a/public/css/style.css
+++ b/public/css/style.css
@@ -162,11 +162,14 @@
 .media-list-item {
     margin: 2px;
     width: 60px;
+    min-height: 90px;
     height: 90px;
     max-height: 90px;
     border: 1px solid #5a5a5a;
     cursor: pointer;
     overflow: hidden;
+    display: flex;
+    align-items: center;
 }
 
 .media-list-item:first-child {
