--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,7 +31,7 @@
     max-height: 100%;
     position: fixed;
     left: -300px;
-    z-index: 999;
+    /*z-index: 999;*/
 }
 
 .sidebar-wrapper ul {
@@ -138,7 +138,7 @@
 }
 
 .right-sidebar {
-    z-index: 1000;
+    /*z-index: 1000;*/
     padding: 5px;
     position: fixed;
     right: 250px;
@@ -256,6 +256,9 @@
     margin-left: 0px;
     opacity: 1;
 }
+/*.lightroom-img {*/
+/*    z-index: 9999;*/
+/*}*/
 /*=== End Light Room ======*/
 
 /*=== General =============*/
