--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -16,9 +16,9 @@
                     </div>
                 </div>
                 <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                    <a class="nav-link active" id="v-pills-playlist-tab" data-toggle="pill" href="#v-pills-playlist"
+                    <a class="nav-link side-pill active" id="v-pills-playlist-tab" data-toggle="pill" href="#v-pills-playlist"
                        role="tab" aria-controls="v-pills-playlist" aria-selected="true">Playlists</a>
-                    <a class="nav-link" id="v-pills-screen-tab" data-toggle="pill" href="#v-pills-screen" role="tab"
+                    <a class="nav-link side-pill" id="v-pills-screen-tab" data-toggle="pill" href="#v-pills-screen" role="tab"
                        aria-controls="v-pills-screen" aria-selected="false">Screens</a>
                 </div>
             </div>
@@ -36,9 +36,9 @@
                                     <div class="col-md-12">
                                         <div class="row">
                                             <div class="col-md-4">
-                                                <h2>Your Playlists</h2>
+                                                <h2 class="color-figma-text">Playlists</h2>
                                             </div>
-                                            <div class="col-md-8"><a class="btn btn-primary float-right" href="#"
+                                            <div class="col-md-8"><a class="btn btn-primary float-right btn-color-figma" href="#"
                                                                      data-toggle="modal"
                                                                      data-target="#addPlaylistModal"><i
                                                             class="fa fa-plus" aria-hidden="true"></i> &nbsp;Add
@@ -78,10 +78,10 @@
                                     <div class="col-md-12">
                                         <div class="row">
                                             <div class="col-md-4">
-                                                <h2>Your Screens</h2>
+                                                <h2 class="color-figma-text">Screens</h2>
                                             </div>
                                             <div class="col-md-8">
-                                                <a class="btn btn-primary float-right" href="#"
+                                                <a class="btn btn-primary float-right  btn-color-figma" href="#"
                                                                      data-toggle="modal"
                                                                      data-target="#addScreenModal"><i
                                                             class="fa fa-plus" aria-hidden="true"></i>
@@ -91,7 +91,7 @@
                                         </div>
                                     </div>
                                     <div class="col-md-12">
-                                        <table class="table table-hover">
+                                        <table class="table color-figma-text">
                                             <thead>
                                             <tr>
                                                 <th scope="col">Screen</th>
