--- a/views/account/admin_login.ejs
+++ b/views/account/admin_login.ejs
@@ -3,15 +3,15 @@
 <div class="py-5 text-center">
     <div class="container">
         <div class="row">
-            <div class="mx-auto col-md-6 col-10 bg-white p-5">
-                <h1 class="mb-4">Log in</h1>
+            <div class="mx-auto col-md-6 col-10 bg-white p-5 login-box">
+                <h1 class="mb-4 color-figma-text">Log in</h1>
                 <form method="post" action="/admin-login">
-                    <div class="form-group"> <input name="email" type="email" class="form-control" placeholder="Enter email" id="form9"> </div>
-                    <div class="form-group mb-3"> <input name="password" type="password" class="form-control" placeholder="Password" id="form10"> </div>
+                    <div class="form-group"> <input name="email" type="email" class="form-control login-input" placeholder="Enter email" id="form9"> </div>
+                    <div class="form-group mb-3"> <input name="password" type="password" class="form-control login-input" placeholder="Password" id="form10"> </div>
                     <div class="form-group">
-                        <h6 class="text-left">Don't have an account, <a href="admin-signup">Create Account</a></h6>
+                        <h6 class="text-left login-text-below">Don't have an account, <a href="admin-signup">Create Account</a></h6>
                     </div>
-                    <button type="submit" class="btn btn-primary">Login</button>
+                    <button type="submit" class="btn btn-primary login-btn">Login</button>
                 </form>
             </div>
         </div>
