--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container"> <a class="navbar-brand" href="#">
             <i class="fa d-inline fa-lg fa-circle-o"></i>
-            <b> BRAND</b>
+            <b> Signage</b>
         </a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar17">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -16,20 +16,14 @@
                 <% if (user) { %>
                     <li class="nav-item"> <a class="nav-link" href="/dashboard">Dashboard</a> </li>
                 <%} else { %>
-                    <li class="nav-item"> <a class="nav-link" href="#">Features</a> </li>
-                    <li class="nav-item"> <a class="nav-link" href="#">Pricing</a> </li>
-                    <li class="nav-item"> <a class="nav-link" href="#">Product</a> </li>
                 <% } %>
             </ul>
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"> <a class="nav-link" href="#">Services</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#">About</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#">FAQ</a> </li>
             </ul>
             <% if (user) { %>
                 <a class="btn btn-outline-light navbar-btn ml-md-2" href="/logout">Log Out</a>
             <%} else { %>
-                <a class="btn btn-outline-light navbar-btn ml-md-2" href="/admin-login">Log In</a>
             <% } %>
         </div>
     </div>
