--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,15 +6,16 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container"> <a class="navbar-brand" href="#">
-            <i class="fa d-inline fa-lg fa-circle-o"></i>
-            <b> Signage</b>
+<!--            <i class="fa d-inline fa-lg fa-circle-o"></i>-->
+            <img src="/static/favicon.png"  width="30" height="30" alt=""/>
+            <b> Digital Signage</b>
         </a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar17">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbar17">
             <ul class="navbar-nav mr-auto">
                 <% if (user) { %>
-                    <li class="nav-item"> <a class="nav-link" href="/dashboard">Dashboard</a> </li>
+<!--                    <li class="nav-item"> <a class="nav-link" href="/dashboard">Dashboard</a> </li>-->
                 <%} else { %>
                 <% } %>
             </ul>
