--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -99,6 +99,7 @@
                                                 <th scope="col">Controls</th>
                                                 <th scope="col">Actions</th>
                                                 <th scope="col">Status</th>
+                                                <th scope="col">Online</th>
                                             </tr>
                                             </thead>
                                             <tbody id="screenTable">
