--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -252,4 +252,25 @@
     </div>
 </div>
 
+<!--delete confirmation modal-->
+<div class="modal" id="deleteConfirmationModal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title font-weight-normal">Delete Playlist</h5>
+                <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete Media
+            </div>
+            <div class="modal-footer">
+                <button type="button" id="btnConfirmDelete" class="btn btn-danger">Delete</button>
+                <button id="btnCloseAddPlaylistModal" type="button" class="btn btn-secondary" data-dismiss="modal">
+                    Close
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <%- include ('partials/layout_footer') %>
