--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,6 +20,7 @@
                 <% } %>
             </ul>
             <ul class="navbar-nav ml-auto">
+                <li class="nav-item"> <a class="nav-link" href="#">Contact Us</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#">About</a> </li>
             </ul>
             <% if (user) { %>
