added icons with side bar

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -17,9 +17,11 @@
                 </div>
                 <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                     <a class="nav-link side-pill active" id="v-pills-playlist-tab" data-toggle="pill" href="#v-pills-playlist"
-                       role="tab" aria-controls="v-pills-playlist" aria-selected="true">Playlists</a>
+                       role="tab" aria-controls="v-pills-playlist" aria-selected="true"><i class="fa fa-list" aria-hidden="true"></i>
+                        Playlists</a>
                     <a class="nav-link side-pill" id="v-pills-screen-tab" data-toggle="pill" href="#v-pills-screen" role="tab"
-                       aria-controls="v-pills-screen" aria-selected="false">Screens</a>
+                       aria-controls="v-pills-screen" aria-selected="false"><i class="fa fa-desktop" aria-hidden="true"></i>
+                        Screens</a>
                 </div>
             </div>
             <!-- sidebar-content  -->
