--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,5 +5,6 @@
 <script src="/static/bootstrap-notify/bootstrap-notify.js"></script>
 <script src="/static/blueimp-file-upload/js/vendor/jquery.ui.widget.js"></script>
 <script src="/static/blueimp-file-upload/js/jquery.fileupload.js"></script>
+<script src="/static/object-hash/dist/object_hash.js"></script>
 
 <script src="/static/js/main.js"></script>
