--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -22,6 +22,13 @@
                     <a class="nav-link side-pill" id="v-pills-screen-tab" data-toggle="pill" href="#v-pills-screen" role="tab"
                        aria-controls="v-pills-screen" aria-selected="false"><i class="fa fa-desktop" aria-hidden="true"></i>
                         Screens</a>
+                    <hr class="sidebar-hr">
+                    <a class="nav-link side-pill" id="v-pills-pp-tab" data-toggle="pill" href="#v-pills-pp" role="tab"
+                       aria-controls="v-pills-pp" aria-selected="false"><i class="fa fa-certificate" aria-hidden="true"></i>
+                        Privacy Policy</a>
+                    <a class="nav-link side-pill" id="v-pills-setting-tab" data-toggle="pill" href="#v-pills-setting" role="tab"
+                       aria-controls="v-pills-pp" aria-selected="false"><i class="fa fa-cogs" aria-hidden="true"></i>
+                        Settings</a>
                 </div>
             </div>
             <!-- sidebar-content  -->
@@ -108,6 +115,38 @@
                                             </tbody>
                                         </table>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="v-pills-pp" role="tabpanel" aria-labelledby="v-pills-pp-tab">
+                        <div class="row">
+                            <div class="col-md-8 dashboard-content">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="row">
+                                            <div class="col-md-4">
+                                                <h2 class="color-figma-text">Privacy Policy</h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-12"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="v-pills-setting" role="tabpanel" aria-labelledby="v-pills-setting-tab">
+                        <div class="row">
+                            <div class="col-md-8 dashboard-content">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="row">
+                                            <div class="col-md-4">
+                                                <h2 class="color-figma-text">Settings</h2>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-12"></div>
                                 </div>
                             </div>
                         </div>
