--- a/views/account/admin_signup.ejs
+++ b/views/account/admin_signup.ejs
@@ -3,22 +3,22 @@
 <div class="py-5 text-center">
     <div class="container">
         <div class="row">
-            <div class="mx-auto col-lg-6 col-10">
-                <h1>Sign Up</h1>
+            <div class="mx-auto col-lg-6 col-10 login-box pd-30">
+                <h1 class=" color-figma-text">Sign Up</h1>
                 <p>
                     <% if (messages.info) { %>
                         <%- messages.info %>>
                     <% } %>
                 </p>
                 <form class="text-left" action="/admin-signup" method="post">
-                    <div class="form-group"> <label for="form16">Name</label> <input name="name" type="text" class="form-control" id="form16" placeholder="Full name"> </div>
-                    <div class="form-group"> <label for="form18">Email</label> <input name="email" type="email" class="form-control" id="form18" placeholder="Email address"> </div>
+                    <div class="form-group"> <label for="form16" class="color-figma-text">Name</label> <input name="name" type="text" class="form-control login-input" id="form16" placeholder="Full name"> </div>
+                    <div class="form-group"> <label for="form18" class="color-figma-text">Email</label> <input name="email" type="email" class="form-control login-input" id="form18" placeholder="Email address"> </div>
                     <div class="form-row">
-                        <div class="form-group col-md-6"> <label for="form19">Password</label> <input name="password" type="password" class="form-control" id="form19"> </div>
-                        <div class="form-group col-md-6"> <label for="form20">Confirm Password</label> <input name="confirmPassword" type="password" class="form-control" id="form20"> </div>
+                        <div class="form-group col-md-6"> <label for="form19" class="color-figma-text">Password</label> <input name="password" type="password" class="form-control login-input" id="form19" placeholder="Passowrd"> </div>
+                        <div class="form-group col-md-6"> <label for="form20" class="color-figma-text">Confirm Password</label> <input name="confirmPassword" type="password" class="form-control login-input" id="form20" placeholder="Confirm password"> </div>
                     </div>
                     <div class="form-group">
-                        <h6 class="">Already have an account: <a href="/admin-login">Login</a></h6>
+                        <h6 class="login-text-below">Already have an account: <a href="/admin-login">Login</a></h6>
                     </div>
                     <button type="submit" class="btn btn-primary">Sign up</button>
                 </form>
