--- a/views/account/admin_login.ejs
+++ b/views/account/admin_login.ejs
@@ -5,6 +5,9 @@
         <div class="row">
             <div class="mx-auto col-md-6 col-10 bg-white p-5 login-box">
                 <h1 class="mb-4 color-figma-text">Log in</h1>
+                <% if (flashMessage.length > 0) { %>
+                    <div class="flash-error"> <%= flashMessage[0].msg %> </div>
+                <% } %>
                 <form method="post" action="/admin-login">
                     <div class="form-group"> <input name="email" type="email" class="form-control login-input" placeholder="Enter email" id="form9"> </div>
                     <div class="form-group mb-3"> <input name="password" type="password" class="form-control login-input" placeholder="Password" id="form10"> </div>
