--- a/views/account/admin_signup.ejs
+++ b/views/account/admin_signup.ejs
@@ -5,11 +5,9 @@
         <div class="row">
             <div class="mx-auto col-lg-6 col-10 login-box pd-30">
                 <h1 class=" color-figma-text">Sign Up</h1>
-                <p>
-                    <% if (messages.info) { %>
-                        <%- messages.info %>>
-                    <% } %>
-                </p>
+                <% if (flashMessage.length > 0) { %>
+                    <div class="flash-error"> <%= flashMessage[0].msg %> </div>
+                <% } %>
                 <form class="text-left" action="/admin-signup" method="post">
                     <div class="form-group"> <label for="form16" class="color-figma-text">Name</label> <input name="name" type="text" class="form-control login-input" id="form16" placeholder="Full name"> </div>
                     <div class="form-group"> <label for="form18" class="color-figma-text">Email</label> <input name="email" type="email" class="form-control login-input" id="form18" placeholder="Email address"> </div>
