--- a/views/partials/app_footer.ejs
+++ b/views/partials/app_footer.ejs
@@ -2,6 +2,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
+<script src="/static/js/jquery-auto-hide-cursor.min.js"></script>
 <script src="/static/js/app.js"></script>
 
 </body>
